# master_ai_thesis

./: README.md  cancel_all_jobs.sh  launcher.sh  notebook_sample_graph.py  notebook_torch.py  optuna.txt  pyproject.toml  readme.md  run.sh  run_job.sh  run_lgcn_optuna.sh  run_lgcn_rel_emb_optuna.sh  run_rgcn_emb_optuna.sh  run_rgcn_optuna.sh  run_script.sh  sample_graph.py  slurm_job.sh  slurm_job_cpu.sh  sync_remote.sh
configs/: best_config.py  default_config.py  experiment_config.py  optuna_config.py
experiments/: lgcn_to_delete.py  model_builder.py  models.py  rgcn_to_delete.py  sample_graph.py  train.py  utils.py  utils_peter.py
kgbench-loader-main/kgbench/: load.py
old/: utils_peter.py
