[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lgcn"
version = "0.1"
description = "LGCN"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Julian Ramondo", email = "j.n.ramondo@student.vu.nl" }]
# homepage = ""
# keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "pandas",
    "rdflib",
    "torch",
    "torchvision",
    "torch-geometric",
    "wget",
    "optuna",
]

[tool.setuptools]
packages = ["experiments"]

[project.urls]
Repository = "https://github.com/julpo99/master_ai_thesis"